[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dwarf-sandbox"
version = "0.1.0"
description = "2D modular sandbox game engine focused on perlin cave generation, automated texture mapping, and custom modding support."
readme = "README.md"
authors = [
    { name = "Rio", email = "rio@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "pygame-ce>=2.5.7",
    "pillow>=12.2.0",
]

[project.urls]
Homepage = "https://github.com"

[tool.setuptools]
# Автоматически находим все модули в корневой папке без проверки их имен валидатором
py-modules = []
